subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Typing_Invalid_14.while
int f() {
    int x;
    x = 1.0;
    return x;
}